Implement /convert endpoint for xml/json conversion (#165)
